# chronos

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md
.github/workflows/: ci.yml
api-server/: CMakeLists.txt  README.md
api-server/src/: main.cpp
db-migrations/: README.md
db-migrations/postgres/: 0001_init.sql  0002_functions_and_triggers.sql  0003_seed_dev.sql  0004_integration_idempotency_keys.sql  0005_integration_event_dedupe.sql
db-migrations/scripts/: migrate.sh  reset_dev.sh  seed_dev.sh
docs/architecture/: 01-system-boundaries.md  02-concrete-defaults.md  03-domain-model.md  04-interface-contracts.md  05-developer-baseline.md  06-phase1-persistence-mvp.md  08-phase3-worker-runtime.md  10-phase5-retry-recovery-failure-management.md  12-phase7-redis-coordination-and-phase8-observability-foundation.md  15-phase10-production-hardening.md  16-jenkins-ci-migration.md
docs/contracts/: schema-evolution-and-message-versioning.md
docs/integrations/: vigil-chronos-contract-v1-openapi.yaml  vigil-chronos-contract-v1.md  vigil-chronos-event-contract-v1.md  vigil-chronos-phase0-1-inventory.md  vigil-chronos-phase0-2-boundary-freeze.md  vigil-chronos-phase0-3-non-functional-baseline.md  vigil-chronos-phase0-basic-testing-report.md  vigil-chronos-phase1-basic-testing-report.md  vigil-chronos-phase2-basic-testing-report.md  (+3 more)
ops/: README-dev-baseline.md  README.md
scheduler/: CMakeLists.txt  README.md
shared-core/: CMakeLists.txt  README.md
tests/: README.md
worker/: CMakeLists.txt  README.md
(+78 files in other folders)
